@@ -123,6 +123,8 @@ This file lists the incompatible changes between Version 2.x and older versions
   - qfbil, qfnorm are obsolete: use qfeval0, qfeval or qfevalb
   - changed set_sign_mod_divisor prototype: module is now useless (implicitly
     contained in sarch argument), hence removed.
+  - removed discrayabs, discrayabscond, discrayrel, discrayrelcond,
+    discrayabslistlong: obsoleted since 2.0
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%% VERSION 2.6 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   - eval() no longer evaluates its arguments in "permissive" mode: eval("1a")
