@@ -1750,23 +1750,11 @@ not \kbd{nf\_GENMAT}. Don't use them:
 
 \fun{GEN}{polredabsall}{GEN x, long flun}
 
-\noindent Superseded by \tet{bnrdisc}:
-
-\fun{GEN}{discrayabs}{GEN bnr,GEN subgroup}
-
-\fun{GEN}{discrayabscond}{GEN bnr,GEN subgroup}
-
-\fun{GEN}{discrayrel}{GEN bnr,GEN subgroup}
-
-\fun{GEN}{discrayrelcond}{GEN bnr,GEN subgroup}
-
 \noindent Superseded by \tet{bnrdisclist0}:
 
 \fun{GEN}{discrayabslist}{GEN bnf,GEN listes}
 
 \fun{GEN}{discrayabslistarch}{GEN bnf, GEN arch, long bound}
-
-\fun{GEN}{discrayabslistlong}{GEN bnf, long bound}
 
 \noindent Superseded by \tet{idealappr} (\fl is ignored)
 
