@@ -74,10 +74,6 @@ GEN     rootmod2(GEN f, GEN p);
 GEN     factmod(GEN f, GEN p);
 GEN     simplefactmod(GEN f, GEN p);
 void    listkill(GEN list);
-GEN     discrayabs(GEN bnr,GEN subgroup);
-GEN     discrayabscond(GEN bnr,GEN subgroup);
-GEN     discrayrel(GEN bnr,GEN subgroup);
-GEN     discrayrelcond(GEN bnr,GEN subgroup);
 GEN     isprincipalforce(GEN bnf,GEN x);
 GEN     isprincipalgen(GEN bnf, GEN x);
 GEN     isprincipalgenforce(GEN bnf,GEN x);
@@ -2321,7 +2317,6 @@ long    bnfcertify0(GEN bnf, long flag);
 GEN     decodemodule(GEN nf, GEN fa);
 GEN     discrayabslist(GEN bnf,GEN listes);
 GEN     discrayabslistarch(GEN bnf, GEN arch, ulong bound);
-GEN     discrayabslistlong(GEN bnf, ulong bound);
 GEN     idealmoddivisor(GEN bnr, GEN x);
 GEN     isprincipalray(GEN bnf, GEN x);
 GEN     isprincipalraygen(GEN bnf, GEN x);
